<resources>
    <string name="app_name">News</string>

    <!--底部导航-->
    <string name="home">首页</string>
    <string name="business">商机</string>
    <string name="focus">关注</string>
    <string name="myself">我的</string>
    <string name="add">添加</string>

    <!--引导页-->
    <string name="content">为了您获取更好的体验请选择你关注的栏目和地区</string>
    <string name="features">专题栏目</string>
    <string name="area">地区</string>
    <string name="register">快速注册</string>
    <string name="look">随便看看</string>
    <!--我的-->
    <string name="my_name">我的昵称</string>
    <string name="account_manager">账户管理</string>
    <string name="enterprise_info">企业信息</string>
    <string name="application_set">应用设置</string>
</resources>
